docs/stylesheets/extra.css
/* ... */
.md-typeset :is(.admonition, details):is(.tip, .hint, .important) {
  border-color: #f4f6f9;
  border-top-color: #f4f6f9;
  border-right-color: #f4f6f9;
  border-bottom-color: #f4f6f9;
  border-left-color: #f4f6f9;
}
.md-typeset :is(.admonition, details):is(.info, .hint, .important) {
  border-color: #f4f6f9;
  border-top-color: #f4f6f9;
  border-right-color: #f4f6f9;
  border-bottom-color: #f4f6f9;
  border-left-color: #f4f6f9;
}
/*note border color*/
.md-typeset :is(.admonition, details):is(.note, .hint, .important) {
  border-color: #f4f6f9;
  border-top-color: #f4f6f9;
  border-right-color: #f4f6f9;
  border-bottom-color: #f4f6f9;
  border-left-color: #f4f6f9;
  background-image: "Banner.svg";
  background-size: 20px 20px;
  background-position: 0 0, 0 10px, 10px -10px, -10px 0px;
}
.md-typeset :is(.admonition, details):is(.note, .hint, .important):before {
  position: relative;
  background: white;
  transform-style: preserve-3d;
}
.md-typeset :is(.admonition, details):is(.warning, .caution, .attention) {
  border-color: #f4f6f9;
  border-top-color: #f4f6f9;
  border-right-color: #f4f6f9;
  border-bottom-color: #f4f6f9;
  border-left-color: #f4f6f9;
}
.md-typeset :is(.admonition, details):is(.example) {
  border-color: #f4f6f9;
  border-top-color: #f4f6f9;
  border-right-color: #f4f6f9;
  border-bottom-color: #f4f6f9;
  border-left-color: #f4f6f9;
}
.md-typeset :is(.admonition, details):is(.danger, .error) {
  border-color: #f4f6f9;
  border-top-color: #f4f6f9;
  border-right-color: #f4f6f9;
  border-bottom-color: #f4f6f9;
  border-left-color: #f4f6f9;
}
.md-typeset
  :-webkit-any(.warning, .caution, .attention)
  > :-webkit-any(.admonition-title, summary) {
  background-color: #f4f6f9;
}
.md-typeset :-webkit-any(.example) > :-webkit-any(.admonition-title, summary) {
  background-color: #f4f6f9;
}
.md-typeset
  :-webkit-any(.danger, .error)
  > :-webkit-any(.admonition-title, summary) {
  background-color: #f4f6f9;
}

.md-typeset .admonition-title,
.md-typeset summary {
  background-color: rgba(246, 19, 34, 0.1);
  border: none;
  font-weight: 700;
  margin: 0 -0.6rem;
  padding-bottom: 16px;
  padding-top: 24px;
  position: relative;
}
.text-quickstart {
  line-height: 26px;
}
.md-search {
  padding: 0.6rem 0;
}
[dir="ltr"] .md-search__icon[for="__search"] {
  left: 0.5rem;
}
.md-search:before {
  box-sizing: border-box;

  position: absolute;
  left: 56.2%;
  right: 29.11%;
  top: 13.56%;
  bottom: 52.54%;

  /* Neutral/Gray 800 */

  background: #1e2330;
  /* Neutral/Gray 600 */

  border: 1px solid #4d5469;
  border-radius: 8px;
}

.image-wrapper {
  margin-top: unset;
}

.md-typeset .tabbed-labels > label:hover {
  background: linear-gradient(331.49deg, #8031ff 0%, #5767ff 100%);
  border-radius: 25px;
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  color: #ffff;
  gap: 10px;
}

label {
  font-family: var(--md-text-font-family);
  font-style: normal;

  text-align: left;
  flex: none;
  order: 0;
  flex-grow: 0;
  padding: 0px -0.4px;
}
label.md-nav__title {
  font-family: var(--md-text-font-family);
  font-style: normal;

  text-align: left;
  flex: none;
  order: 0;
  flex-grow: 0;
  padding: 0px 1.6px;
}

label.md-sidebar__scrollwrap {
  scrollbar-gutter: stable;
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  margin: 0 2.2rem;
  overflow-y: auto;
  scrollbar-color: var(--md-default-fg-color--lighter) transparent;
  scrollbar-width: thin;
  display: flex;
  overflow-x: scroll;
  position: relative;
  scroll-behavior: smooth;
  scroll-snap-type: x mandatory;
}
.md-typeset .tabbed-labels > label {
  border-bottom: 0.1rem solid transparent;
  border-radius: 0.1rem 0.1rem 0 0;
  color: #6b738b;
  cursor: pointer;
  flex-shrink: 0;
  font-family: var(--md-text-font-family);
  font-style: normal;
  font-weight: 400;
  font-size: 16px;
  line-height: 22px;
  font-size: 0.64rem;
  font-weight: 700;
  padding: 0.78125em 1.25em 0.625em;
  scroll-margin-inline-start: 1rem;
  transition: background-color 0.25s, color 0.25s;
  white-space: nowrap;
  width: auto;
}
.js.md-nav__list {
  list-style: none;
  /* margin: 0; */
  padding: 0;
  background: var(--md-accent-fg-color);
  position: absolute;
  width: 248px;
  height: 0px;
  left: 0px;
  top: 0px;

  /* Neutral/Gray 200 */

  border: 1px solid #e9ebf0;
}
.md-nav__item .md-nav__link--active:after {
  color: #5364fe;
}
.md-nav__link--passed:after {
  color: var(--md-default-fg-color--light);
}

/* border for right navigation */
.md-nav__list[data-md-component="toc"] {
  padding-right: 0rem;
  border-left: 1px solid #e9ebf0;
  position: relative;
}

/* highlight border */
.md-sidebar--secondary .md-nav__link--active::before {
  content: "\00a0 ";
  border-left: 1px solid #9ca3b8;
  position: absolute;
  left: -1px;
}

/* right and left navigation, first layer */
.md-nav__list > .md-nav__item {
  font-size: 14px;
  color: #000000 !important;
}

/* right navigation, first layer links */
.md-nav--secondary > .md-nav__list > .md-nav__item > .md-nav__link {
  font-size: 14px;
  color: #000000;
}

